Front du Profil + améliorations
Création du front profil et amélioration de la page d'accueil

--- a/accueil.html
+++ b/accueil.html
@@ -30,13 +30,13 @@
                 <li class="nav-item"><a class="nav-link" href="#" style="color:white">Offres d'emploi</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" style="color:white">Messagerie</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" style="color:white">Notifications</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" style="color:white">Vous</a></li>
+                <li class="nav-item"><a class="nav-link" href="vous.html" style="color:white">Vous</a></li>
             </ul>
         </div>
     </nav>
     <!-- Contenu -->
     <div class="row" align="center">
-        <div class="col-sm-4" style=" height:max-content; background-color:#256A6A;" id="section1">
+        <div class="col-sm-4" id="section1">
             <br>
             <div class="card">
                 <div class="card-header">
@@ -51,7 +51,7 @@
             </div>
             <br>
         </div>
-        <div class="col-sm-4" style=" height:max-content; background-color:#256A6A;" id="section2">
+        <div class="col-sm-4" id="section2">
             <br>
             <div class="card">
                 <div class="card-header">
@@ -68,10 +68,10 @@
             </div>
             <br>
         </div>
-        <div class="col-sm-4" style=" height:max-content; background-color:#256A6A;" id="section3">
+        <div class="col-sm-4" id="section3">
             <br>
             <div class="card">
-                <div class="card-header">Evènement de la semaine</div>
+                <div class="card-header"><h4>Evènement de la semaine</h4></div>
                 <div class="card-body">Content</div> 
                 <div class="card-footer">
                     <h6>Contact us : </h6>
