--- a/accueil.html
+++ b/accueil.html
@@ -74,7 +74,7 @@
                 <div class="card-header"><h4>Evènement de la semaine</h4></div>
                 <div class="card-body">Content</div> 
                 <div class="card-footer">
-                    <h6>Contact us : </h6>
+                    <h6>Contactez-nous : </h6>
                     Telephone : <a href="tel:+33.01.53.64.05.24">(+33) 01 53 64 05 24</a><br>
                     Mail : <a href="mailto:admissions-paris@ece.fr">admissions-paris@ece.fr</a><br>
                     Localisation :<br>
